# SuperPipeline

./: .gitignore  AGENTS.md  DEPLOY.md  EXPLORATION.md  PROJECT_ANALYSIS_INDEX.md  README.md  SPEC-DARK-FACTORY.md  SPEC.md  UI_REDESIGN_BRIEF.md  run_with_docs.py
server/: AGENTS.md  config.yaml  pyproject.toml  reconstruct_prompts.py  run_with_docs.py  trace_run.py
server/pipelines/: bilibili_article.yaml  douyin_image_text.yaml  hermes_docker_deploy.yaml  wechat_article.yaml  x_tweet.yaml  xiaohongshu_image_text.yaml
server/src/agents/: base.py
server/src/agents/analyst/: __init__.py  agent.py  schemas.py
server/src/agents/reviewer/: __init__.py  (+2 more)
server/src/api/: app.py  schemas.py  sse.py
server/src/cli/: app.py  formatters.py
server/src/core/: config.py  engine.py  models.py  orchestrator.py  pipeline_loader.py  progress_logger.py  registry.py  state.py
server/src/storage/: asset_store.py  models.py  state_store.py
server/tests/: test_api.py  test_cli.py  test_cli_agent.py  test_cli_content.py  test_cli_run.py  test_config.py  test_engine_rerun.py  test_models.py  test_node_supervision_e2e.py  test_orchestrator.py  test_orchestrator_snapshots.py  test_pipeline_loader.py  test_platforms.py  test_prompt_override.py  test_registry.py  test_state.py  test_state_store_snapshots.py  test_storage.py
server/tests/agents/: test_analyst.py  test_content_generator.py  test_content_generator_tag_map.py  test_material_collector.py  test_reviewer.py  test_topic_generator.py
server/tests/integration/: test_e2e.py
server/tests/unit/: test_material_source_url.py
(+115 files in other folders)
